--- a/doc/shortcuts.tex
+++ b/doc/shortcuts.tex
@@ -162,9 +162,9 @@
 	breakatwhitespace = true,
 	showstringspaces = false,
 	escapeinside = {(*@}{@*)},
-	moredelim=**[is][\color{red}]{(red@}{@red)},
-        moredelim=**[is][\color{green}]{(gre@}{@gre)},
-        moredelim=**[is][\color{blue}]{(blu@}{@blu)},
+	moredelim=**[is][\color{red}]{(red@}{@*)},
+        moredelim=**[is][\color{green}]{(gre@}{@*)},
+        moredelim=**[is][\color{blue}]{(blu@}{@*)},
 	}
   % 
   % \lstdefinestyle{txt}{language= C, 
