--- a/doc/reference.tex
+++ b/doc/reference.tex
@@ -2,6 +2,383 @@
 \chapter{PFFT reference}\label{chap:ref}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Data Types and Files}
+\subsection{Complex numbers}
+
+\subsection{Precision}
+
+\subsection{Memory allocation}
+
+
+\section{Using plans}
+\begin{lstlisting}
+void pfft_execute(const pfft_plan plan);
+void pfft_execute_dft(const pfft_plan plan, pfft_complex *in, pfft_complex *out);
+void pfft_execute_dft_r2c(const pfft_plan plan, double *in, pfft_complex *out);
+void pfft_execute_dft_c2r(const pfft_plan plan, pfft_complex *in, double *out);
+void pfft_execute_r2r(const pfft_plan plan, double *in, double *out);
+void pfft_destroy_plan(const pfft_plan plan);
+\end{lstlisting}
+
+
+
+\section{Complex-to-complex FFT}
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_dft_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_dft(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_local_block_dft_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_dft(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_many_dft(
+    int rnk_n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+pfft_plan pfft_plan_dft_3d(
+    const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft(
+    int rnk, const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_skipped(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    const int *skip_trafos, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+\end{lstlisting}
+
+\section{Real-to-complex FFT}
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_dft_r2c_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_r2c(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_local_block_dft_r2c_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_dft_r2c(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_many_dft_r2c(
+    int rnk_n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+pfft_plan pfft_plan_dft_r2c_3d(
+    const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_r2c_skipped(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    const int *skip_trafos, double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+\end{lstlisting}
+
+\section{Complex-to-real FFT}
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_dft_c2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_c2r(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_local_block_dft_c2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_dft_c2r(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_many_dft_c2r(
+    int rnk_n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+pfft_plan pfft_plan_dft_c2r_3d(
+    const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_c2r_skipped(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    const int *skip_trafos, pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+\end{lstlisting}
+
+\section{Real-to-real FFT}
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_r2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_r2r(
+    int rnk_n, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_r2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_local_block_r2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_r2r(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+void pfft_local_block_many_r2r(
+    int rnk_n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, int pid, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
+
+\begin{lstlisting}
+pfft_plan pfft_plan_r2r_3d(
+    const ptrdiff_t *n, double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+pfft_plan pfft_plan_r2r(
+    int rnk_n, const ptrdiff_t *n, double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+pfft_plan pfft_plan_many_r2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+pfft_plan pfft_plan_many_r2r_skipped(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    const int *skip_trafos, double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+\end{lstlisting}
+
+\subsection{Timers for FFT computations}
+\begin{lstlisting}
+void pfft_reset_timer(
+    pfft_plan ths);
+pfft_timer pfft_get_timer(
+    const pfft_plan ths);
+void pfft_print_average_timer(
+    const pfft_plan ths, MPI_Comm comm);
+void pfft_print_average_timer_adv(
+    const pfft_plan ths, MPI_Comm comm);
+void pfft_write_average_timer(
+    const pfft_plan ths, const char *name, MPI_Comm comm);
+void pfft_write_average_timer_adv(
+    const pfft_plan ths, const char *name, MPI_Comm comm);
+
+pfft_timer pfft_copy_timer(
+    const pfft_timer orig);
+void pfft_average_timer(
+    pfft_timer ths);
+pfft_timer pfft_add_timers(
+    const pfft_timer sum1, const pfft_timer sum2);
+pfft_timer pfft_reduce_max_timer(
+    const pfft_timer ths, MPI_Comm comm);
+double* pfft_convert_timer2vec(
+    const pfft_timer ths);
+pfft_timer pfft_convert_vec2timer(
+    const double *times);
+void pfft_destroy_timer(
+    pfft_timer ths);
+\end{lstlisting}
+
+
+
+
+\section{Ghost cell communication}
+
+\begin{lstlisting}
+void pfft_exchange(
+    pfft_gcplan ths);
+void pfft_reduce(
+    pfft_gcplan ths);
+void pfft_destroy_gcplan(
+    pfft_gcplan ths);
+\end{lstlisting}
+
+\subsection{Local array size}\label{sec:gc:local_size}
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_gc_3d(
+    const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    ptrdiff_t alloc_local, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
+ptrdiff_t pfft_local_size_gc(
+    int rnk_n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    ptrdiff_t alloc_local, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
+ptrdiff_t pfft_local_size_many_gc(
+    int rnk_n, const ptrdiff_t *local_n, const ptrdiff_t *local_start, ptrdiff_t alloc_local,
+    ptrdiff_t howmany, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
+\end{lstlisting}
+Works for complex and real arrays. R2c FFTs use the complex array decomposition for padded real values and the real array decomposition for non-padded real values.
+
+
+
+\subsection{Plan real data ghost cells}
+Local size fucntions are the same for complex and real data, see Section~\ref{sec:gc:local_size}.
+
+\begin{lstlisting}
+pfft_gcplan pfft_plan_rgc_3d(
+    const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    double *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_rgc(
+  int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+  double *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_many_rgc(
+  int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
+  const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, double *data, MPI_Comm comm_cart,
+  unsigned gc_flags);
+\end{lstlisting}
+
+\subsection{Plan complex data ghost cells}
+Local size fucntions are the same for complex and real data, see Section~\ref{sec:gc:local_size}.
+
+\begin{lstlisting}
+pfft_gcplan pfft_plan_cgc_3d(
+    const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_cgc(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_many_cgc(
+    int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
+    const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, pfft_complex *data, MPI_Comm comm_cart,
+    unsigned gc_flags);
+\end{lstlisting}
+
+\subsection{Timers for ghost cell communication}
+\begin{lstlisting}
+void pfft_reset_gctimers(
+    pfft_gcplan ths);
+pfft_gctimer pfft_get_gctimer_exg(
+    const pfft_gcplan ths);
+pfft_gctimer pfft_get_gctimer_red(
+    const pfft_gcplan ths);
+void pfft_print_average_gctimer(
+    const pfft_gcplan ths, MPI_Comm comm);
+void pfft_print_average_gctimer_adv(
+    const pfft_gcplan ths, MPI_Comm comm);
+void pfft_write_average_gctimer(
+    const pfft_gcplan ths, const char *name, MPI_Comm comm);
+void pfft_write_average_gctimer_adv(
+    const pfft_gcplan ths, const char *name, MPI_Comm comm);
+
+pfft_gctimer pfft_copy_gctimer(
+    const pfft_gctimer orig);
+void pfft_average_gctimer(
+    pfft_gctimer ths);
+pfft_gctimer pfft_add_gctimers(
+    const pfft_gctimer sum1, const pfft_gctimer sum2);
+pfft_gctimer pfft_reduce_max_gctimer(
+    const pfft_gctimer ths, MPI_Comm comm);
+void pfft_convert_gctimer2vec(
+    const pfft_gctimer ths, double *times);
+pfft_gctimer pfft_convert_vec2gctimer(
+    const double *times);
+void pfft_destroy_gctimer(
+    pfft_gctimer ths);
+\end{lstlisting}
+
+
+
+
+\newpage
 \section{Generalization to arbitrary dimensions of the FFT}
 The following arrays are of length three for every functions ending with \code{_3d}
 \begin{compactitem}
@@ -350,7 +727,6 @@ void pfft_execute_dft(const pfft_plan plan, pfft_complex *in, pfft_complex *out)
 void pfft_execute_dft_r2c(const pfft_plan plan, double *in, pfft_complex *out);
 void pfft_execute_dft_c2r(const pfft_plan plan, pfft_complex *in, double *out);
 void pfft_execute_r2r(const pfft_plan plan, double *in, double *out);
-void pfft_destroy_plan(const pfft_plan plan);
 \end{lstlisting}
 
 
@@ -363,7 +739,7 @@ pfft_plan pfft_plan_many_dft_skipped(
     const ptrdiff_t *ni, const ptrdiff_t *no,
     ptrdiff_t howmany,
     const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-    (red@const int *skip_trafos@red),
+    (red@const int *skip_trafos@*),
     pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
     int sign, unsigned pfft_flags);
 \end{lstlisting}
